example/ssl-tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qmig-ingress
  namespace: qmig-ns
  labels:
    component: "app"
    app.kubernetes.io/name: qmig
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "example.com"
      secretName: qmig-tls
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qmig-app
                port:
                  number: 4200
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: qmig-eng
                port:
                  number: 8080
